Config modified with a funky dracula setup

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,16 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'catpuccin/tmux'
 
+# Dracula theme is a bit funky so let's try catpuccin
 set -g @plugin 'dracula/tmux'
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-location false
+set -g @dracula-show-left-icon session
+set -g @dracula-cpu-display-load false
+set -g @dracula-show-battery false
+set -g @dracula-refresh-rate 5
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
