Mouse support enabled

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set-option -sa terminal-overrides ",xterm*:Tc" 
+set -g mouse on
 
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
