Added windows indexing at 1

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,11 @@
 set-option -sa terminal-overrides ",xterm*:Tc" 
 set -g mouse on
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index
+
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
