--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ set -g mouse on
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
-set-window-option -g pane-base-index
+set-window-option -g pane-base-index 1
 
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
