Added yank and copy mode keybinds

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,12 +10,21 @@ set-window-option -g pane-base-index 1
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'catpuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 
 # Dracula theme is a bit funky so let's try catpuccin
 set -g @plugin 'dracula/tmux'
