Added control space as prefix instead of control b

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,12 @@
 set-option -sa terminal-overrides ",xterm*:Tc" 
 set -g mouse on
 
+# Sets the prefix to control space
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
