--- a/tmux.conf
+++ b/tmux.conf
@@ -32,18 +32,18 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'catpuccin/tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 
 # Dracula theme is a bit funky so let's try catpuccin
-set -g @plugin 'dracula/tmux'
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-location false
-set -g @dracula-show-left-icon session
-set -g @dracula-cpu-display-load false
-set -g @dracula-show-battery false
-set -g @dracula-refresh-rate 5
+# set -g @plugin 'dracula/tmux'
+# set -g @dracula-show-fahrenheit false
+# set -g @dracula-show-location false
+# set -g @dracula-show-left-icon session
+# set -g @dracula-cpu-display-load false
+# set -g @dracula-show-battery false
+# set -g @dracula-refresh-rate 5
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
