Tmux conf updated

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,10 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 
+set -g @catppuccin_flavour 'moccha'
+set -g @catppuccin_window_tabs_enabled on 
+
+
 # Dracula theme is a bit funky so let's try catpuccin
 # set -g @plugin 'dracula/tmux'
 # set -g @dracula-show-fahrenheit false
