--- a/tmux.conf
+++ b/tmux.conf
@@ -38,7 +38,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @catppuccin_flavour 'moccha'
 set -g @catppuccin_window_tabs_enabled on 
-
+set -g @catppuccin_powerline_theme_enabled on
 
 # Dracula theme is a bit funky so let's try catpuccin
 # set -g @plugin 'dracula/tmux'
