Added powerline separators

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,6 +39,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @catppuccin_flavour 'moccha'
 set -g @catppuccin_window_tabs_enabled on 
 set -g @catppuccin_powerline_theme_enabled on
+set -g @catppuccin_l_left_separator ""
+set -g @catppuccin_l_right_separator ""
+set -g @catppuccin_r_left_separator ""
+set -g @catppuccin_r_right_separator ""
 
 # Dracula theme is a bit funky so let's try catpuccin
 # set -g @plugin 'dracula/tmux'
