--- a/tmux.conf
+++ b/tmux.conf
@@ -36,9 +36,10 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 
-set -g @catppuccin_flavour 'moccha'
+# set -g @catppuccin_flavour 'moccha'
 set -g @catppuccin_window_tabs_enabled on 
-set -g @catppuccin_powerline_theme_enabled on
+# set -g @catppuccin_powerline_theme_enabled on
+set -g @catppuccin_powerline_icons_theme_enabled on
 set -g @catppuccin_l_left_separator ""
 set -g @catppuccin_l_right_separator ""
 set -g @catppuccin_r_left_separator ""
