--- a/tmux.conf
+++ b/tmux.conf
@@ -44,8 +44,9 @@ set -g @catppuccin_l_left_separator ""
 set -g @catppuccin_l_right_separator ""
 set -g @catppuccin_r_left_separator ""
 set -g @catppuccin_r_right_separator ""
+set -g @catppuccin_host_icon "on"
 
-# Dracula theme is a bit funky so let's try catpuccin
+# Dracula theme is a bit funky so let's try catppuccin
 # set -g @plugin 'dracula/tmux'
 # set -g @dracula-show-fahrenheit false
 # set -g @dracula-show-location false
