Made tmux continuum auto restore and launch on boot

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,11 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 
+set -g @continuum-boot 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+
 # set -g @catppuccin_flavour 'moccha'
 set -g @catppuccin_window_tabs_enabled on 
 # set -g @catppuccin_powerline_theme_enabled on
