--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,10 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+# Fixes some OS having issues copying to clipboard
+set -g @override_copy_command 'xclip -i -selection clipboard'         
+
+
 
 set -g @continuum-boot 'on'
 set -g @resurrect-strategy-nvim 'session'
