Fixed window names

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,6 +48,7 @@ set -g @catppuccin_l_right_separator ""
 set -g @catppuccin_r_left_separator ""
 set -g @catppuccin_r_right_separator ""
 set -g @catppuccin_host_icon "on"
+set -g @catppuccin_window_text "#W"
 
 set -g @continuum-boot 'on'
 set -g @resurrect-strategy-nvim 'session'
