--- a/tmux.conf
+++ b/tmux.conf
@@ -48,7 +48,8 @@ set -g @catppuccin_l_right_separator ""
 set -g @catppuccin_r_left_separator ""
 set -g @catppuccin_r_right_separator ""
 set -g @catppuccin_host_icon "on"
-set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_text "#{window_name}"
+set -g @catppuccin_window_text "#{window_name}"
 
 set -g @continuum-boot 'on'
 set -g @resurrect-strategy-nvim 'session'
