--- a/tmux.conf
+++ b/tmux.conf
@@ -51,10 +51,11 @@ set -g @catppuccin_host_icon "on"
 set -g @catppuccin_window_current_text "#{window_name}"
 set -g @catppuccin_window_text "#{window_name}"
 
-set -g @continuum-boot 'on'
-set -g @resurrect-strategy-nvim 'session'
+# See if I want nvim sessions resurrected, maybe not
+# set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
