Tmux continuum save correctly

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,10 +31,11 @@ bind % split-window -h -c "#{pane_current_path}"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+# Put this last to make sure it saves correctly
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Fixes some OS having issues copying to clipboard
 set -g @override_copy_command 'xclip -i -selection clipboard'         
