--- a/tmux.conf
+++ b/tmux.conf
@@ -56,7 +56,7 @@ set -g @catppuccin_window_text "#{window_name}"
 # set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
+# set -g @continuum-boot 'on'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
