--- a/tmux.conf
+++ b/tmux.conf
@@ -53,10 +53,10 @@ set -g @catppuccin_window_current_text "#{window_name}"
 set -g @catppuccin_window_text "#{window_name}"
 
 # See if I want nvim sessions resurrected, maybe not
+set -g @continuum-boot 'on'
 # set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
-# set -g @continuum-boot 'on'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
