--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ set -g @catppuccin_window_text "#{window_name}"
 
 # See if I want nvim sessions resurrected, maybe not
 set -g @continuum-boot 'off'
-set -g @resurrect-strategy-nvim 'session'
+# set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
