--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind C-t display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
