--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set-option -sa terminal-overrides ",xterm*:Tc" 
+set-window-option -g mode-keys vi
 set -g mouse on
 
 # Sets the prefix to control space
