Added yazi image preview

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,11 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 
+# Yazi's image preview in tmux
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
