--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,7 @@
 set-option -sa terminal-overrides ",xterm*:Tc" 
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 set-window-option -g mode-keys vi
 set -g mouse on
 
