Removed tmux continuum and resurrect in favour of tmuxinator

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,12 +40,12 @@ bind C-t display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 # Put this last to make sure it saves correctly
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Fixes some OS having issues copying to clipboard
 set -g @override_copy_command 'xclip -i -selection clipboard'         
@@ -63,10 +63,10 @@ set -g @catppuccin_window_current_text "#{window_name}"
 set -g @catppuccin_window_text "#{window_name}"
 
 # See if I want nvim sessions resurrected, maybe not
-set -g @continuum-boot 'off'
+# set -g @continuum-boot 'off'
 # set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @continuum-restore 'on'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
